Various minor corrections

--- a/01_agama/dirgha/DA_17.md
+++ b/01_agama/dirgha/DA_17.md
@@ -238,7 +238,7 @@ next: DA_18.html
 69\. “Suppose that wanderer of another religion asks this question, ‘How many fruits and virtues do you seek from these pleasures?’
 {:#p69}
 
-70\. “You should answer them, ‘These pleasures will have seven fruits and virtues. What are the seven? In the present life, one achieves the realization of awakening. Even if one doesn’t achieve it, they will achieve it right before their life ends. If they don’t achieve it before their life ends, then they will end the five lower bonds and Parinirvāṇa in the interim, Parinirvāṇa at birth, Parinirvāṇa with practice, Parinirvāṇa without practice, or Parinirvāṇa upstream in Akaniṣṭha. Good men, these are the seven virtues of these pleasures.
+70\. “You should answer them, ‘These pleasures will have seven fruits and virtues. What are the seven? In the present life, one achieves the realization of awakening. Even if one doesn’t achieve it, they will achieve it right before their life ends. If they don’t achieve it before their life ends, then they will end the five lower bonds and <em>parinirvāṇa</em> in the interim, <em>parinirvāṇa</em> at birth, <em>parinirvāṇa</em> with practice, <em>parinirvāṇa</em> without practice, or <em>parinirvāṇa</em> upstream in Akaniṣṭha. Good men, these are the seven virtues of these pleasures.
 {:#p70}
 
 71\. “‘Good men, if a monk in training desires to do the above, he’ll look for a peaceful place before eliminating five hindrances. What are the five? The hindrances of desire, anger, sleepiness, agitation, and doubt. If a trainee monk seeks the above place of safety before ceasing the five hindrances, he won’t be capable of diligently cultivating the four abodes of mindfulness or the seven factors of awakening. Attaining the state of the superior man and developing noble wisdom will be impossible for someone seeking to know and see them.
