--- a/01_agama/dirgha/DA_19.md
+++ b/01_agama/dirgha/DA_19.md
@@ -13,13 +13,13 @@ next: DA_20.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Kapilavastu in the country of the Śākyans. He was accompanied by a great assembly of five hundred monks, all of whom were arhats. Marvelous gods had also gathered from the ten directions to honor the Tathāgata and the saṅgha of monks.
 {:#p1}
 
-2\. It was then that four Śuddhâvāsa gods up in heaven each thought to themselves, “Today, the Bhagavān is staying at Kapilavastu in the country of the Śākyans. He’s accompanied by a great assembly of five hundred monks, all of whom are arhats. Marvelous gods have also gathered from the ten directions to honor the Tathāgata and the saṅgha of monks. Now, let’s go visit the Bhagavān as well. We’ll each praise the Tathāgata with a verse.”
+2\. It was then that four Śuddhāvāsa gods up in heaven each thought to themselves, “Today, the Bhagavān is staying at Kapilavastu in the country of the Śākyans. He’s accompanied by a great assembly of five hundred monks, all of whom are arhats. Marvelous gods have also gathered from the ten directions to honor the Tathāgata and the saṅgha of monks. Now, let’s go visit the Bhagavān as well. We’ll each praise the Tathāgata with a verse.”
 {:#p2}
 
-3\. Those four Śuddhâvāsa gods then disappeared from their heaven and arrived at Kapilavastu of the Śākyans in the time it takes a strong man to flex his arm. Once they had arrived, those four Śuddhâvāsa gods bowed their heads at the Buddha’s feet and stood to one side.
+3\. Those four Śuddhāvāsa gods then disappeared from their heaven and arrived at Kapilavastu of the Śākyans in the time it takes a strong man to flex his arm. Once they had arrived, those four Śuddhāvāsa gods bowed their heads at the Buddha’s feet and stood to one side.
 {:#p3}
 
-4\. The first Śuddhâvāsa god went before the Buddha and praised him with this verse:
+4\. The first Śuddhāvāsa god went before the Buddha and praised him with this verse:
 {:#p4}
 
 * {:.verse}“Today, a great congregation\\
@@ -27,7 +27,7 @@ Of gods and spirits has gathered.\\
 They’ve come for the Dharma\\
 And to bow to the supreme assembly.”
 
-5\. After speaking this verse, that god withdrew and stood to one side. Another Śuddhâvāsa god then composed a verse:
+5\. After speaking this verse, that god withdrew and stood to one side. Another Śuddhāvāsa god then composed a verse:
 {:#p5}
 
 * {:.verse}“Monks see the many defilements;\\
@@ -35,7 +35,7 @@ Their upright minds guard against them.\\
 Desire is like the sea swallowing rivers;\\
 The wise guard their faculties against it.”
 
-6\. Having spoken this verse, that god withdrew and stood to one side. Another Śuddhâvāsa god then composed a verse:
+6\. Having spoken this verse, that god withdrew and stood to one side. Another Śuddhāvāsa god then composed a verse:
 {:#p6}
 
 * {:.verse}“Remove thorns, level craving’s chasm,\\
@@ -43,7 +43,7 @@ And fill the trench of ignorance.\\
 Trek alone to the site of purity\\
 Like excellent, well-trained elephants.”
 
-7\. Having spoken this verse, that god withdrew and stood to one side. Another Śuddhâvāsa god composed a verse:
+7\. Having spoken this verse, that god withdrew and stood to one side. Another Śuddhāvāsa god composed a verse:
 {:#p7}
 
 * {:.verse}“Taking refuge in the Buddha,\\
@@ -51,7 +51,7 @@ One never falls to a bad destiny.\\
 They abandon their human forms\\
 And receive the pure bodies of gods.”
 
-8\. After those four Śuddhâvāsa gods had presented these verses, the Bhagavān approved of them. They bowed at the Buddha’s feet, circled him three times, and suddenly disappeared.
+8\. After those four Śuddhāvāsa gods had presented these verses, the Bhagavān approved of them. They bowed at the Buddha’s feet, circled him three times, and suddenly disappeared.
 {:#p8}
 
 9\. Not long after they left, the Buddha told the monks, “There’s a great congregation of gods today! There’s a great gathering of gods today! Marvelous gods from the ten directions have come to honor and look upon the Tathāgata and saṅgha of monks. Monks, the Tathāgatas, Arhats, and Completely Awakened Ones of the past also had great congregations of gods, just as I do today. The Tathāgatas, Arhats, and Completely Awakened Ones in the future will have great congregations of gods, just as I do today.
