--- a/01_agama/dirgha/DA_23.md
+++ b/01_agama/dirgha/DA_23.md
@@ -206,7 +206,7 @@ The priest said, “Of course, Gautama! I’d be glad to listen.”
 
 #### The Story of a Past King’s Large Sacrifice
 
-62\. The Buddha told Kūṭatāṇḍya, “A long time ago, there was a warrior king from a water-anointed clan who wanted to arrange a large sacrifice. He met with his priestly great minister and told him, ‘I possess a great fortune, and I freely enjoy the five pleasures, but I’m an old man now. My warriors are powerful; none is weak, and the treasury is overflowing. Now, I want to arrange a large sacrifice. Tell me about the way of sacrifices. What will be needed?’
+62\. The Buddha told Kūṭatāṇḍya, “A long time ago, there was a warrior king from a water-anointed tribe who wanted to arrange a large sacrifice. He met with his priestly great minister and told him, ‘I possess a great fortune, and I freely enjoy the five pleasures, but I’m an old man now. My warriors are powerful; none is weak, and the treasury is overflowing. Now, I want to arrange a large sacrifice. Tell me about the way of sacrifices. What will be needed?’
 {:#p62}
 
 63\. “His great minister said, ‘So it is, great king! As the king has said, the country is wealthy, the army is strong, and the treasury is overflowing. However, the people harbor many evil thoughts, and they don’t practice the proper way. If a sacrifice is performed at this time, it wouldn’t accomplish the way of sacrifices, just as a thief sent to chase a thief wouldn’t become a messenger.
@@ -497,7 +497,7 @@ Should support the three jewels.”
 144\. Those monks went to the Buddha, bowed their heads at his feet, and sat to one side. They asked, “Now that Kūṭatāṇḍya ’s life has ended, where will he be born?”
 {:#p144}
 
-145\. The Buddha told the monks, “That man purely cultivated the religious practice and accomplished one state after the next, and he wasn’t disturbed by anything in the teaching. Because he ended the five lower fetters, his Parinirvāṇa was in the present. He didn’t return to this world.”
+145\. The Buddha told the monks, “That man purely cultivated the religious practice and accomplished one state after the next, and he wasn’t disturbed by anything in the teaching. Because he ended the five lower fetters, his <em>parinirvāṇa</em> was in the present. He didn’t return to this world.”
 {:#p145}
 
 146\. When the monks heard what the Buddha taught, they rejoiced and approved.
