--- a/01_agama/ekottarika/01/EA_01_01.md
+++ b/01_agama/ekottarika/01/EA_01_01.md
@@ -235,7 +235,7 @@ next: ../02/EA_02_01.html
     阿難，勿辭時説法！」</li>
   </ul></td>
   <td><ul class='verse'>
-    <li>“The Śakyan Teacher appeared briefly in the world;<br/>
+    <li>“The Śākyan Teacher appeared briefly in the world;<br/>
     Though his flesh body is gone, the Dharma body remains.<br/>
     We must ensure that the Dharma root isn’t cut;<br/>
     Ānanda, don’t be confused when you recite the Dharma!”</li>
