--- a/01_agama/ekottarika/16/EA_16_01.md
+++ b/01_agama/ekottarika/16/EA_16_01.md
@@ -23,7 +23,7 @@ next: EA_16_02.html
   </tr>
   <tr>
     <td class='ch' title='t125.2.578a20'>爾時，有一魔行天子，知尊者難陀心中所念，便往至孫陀利釋種女所。 飛在虛空，以頌而嗟歎曰：</td>
-    <td id='p3'>3. Knowing this thought in Venerable Nanda’s mind, Māra acting as a god went to the Śakyan woman Sundarī.<sup id="ref3"><a href="#n3">3</a></sup> He hovered in the sky as he called to her in verse:</td>
+    <td id='p3'>3. Knowing this thought in Venerable Nanda’s mind, Māra acting as a god went to the Śākyan woman Sundarī.<sup id="ref3"><a href="#n3">3</a></sup> He hovered in the sky as he called to her in verse:</td>
   </tr>
 <tr>
   <td title='t125.2.578a24'><ul class='verse'>
@@ -41,7 +41,7 @@ next: EA_16_02.html
 </tr>
   <tr>
     <td class='ch' title='t125.2.578a26'>爾時，孫陀利釋種女聞天語已，歡喜，踊躍，不能自勝。 便自莊嚴，修飾房舍，敷好坐具，作倡妓樂，如難陀在家無異。</td>
-    <td id='p4'>4. The Śakyan woman Sundarī rejoiced and celebrated when she heard what that god said, and she was unable to control herself. She dressed herself up, decorated the rooms of her house, prepared fine seats, and danced to music, just as she had when Nanda lived at home.</td>
+    <td id='p4'>4. The Śākyan woman Sundarī rejoiced and celebrated when she heard what that god said, and she was unable to control herself. She dressed herself up, decorated the rooms of her house, prepared fine seats, and danced to music, just as she had when Nanda lived at home.</td>
   </tr>
   <tr>
     <td class='ch' title='t125.2.578a28'>爾時，王波斯匿集在普會講堂，聞難陀比丘還捨法服，習于家業。 所以然者，有天在空中告其妻曰。</td>
@@ -65,7 +65,7 @@ next: EA_16_02.html
   </tr>
   <tr>
     <td class='ch' title='t125.2.578b13'>波斯匿曰： 「我不從如來聞：難陀比丘⋯生死已盡⋯得阿羅漢，心得解脫。 所以然者，有天來告孫陀利釋種女曰。 是時，孫陀利夫人聞此語已，便作倡妓樂，修治服飾，敷諸坐具。 我聞此語已，便來至尊者所。」</td>
-    <td id='p10'>10. The King replied, “I haven’t heard from the Tathāgata that the monk Nanda … has ended birth and death … has become an <em>arhat</em>, and his mind is liberated. The reason I said this was that a god came to the Śakyan woman Sundarī and told it to her. When she heard about it, your wife Sundarī danced, played music, mended her clothes and ornaments, and prepared seats. When I heard about it, I came here to the Venerable.”</td>
+    <td id='p10'>10. The King replied, “I haven’t heard from the Tathāgata that the monk Nanda … has ended birth and death … has become an <em>arhat</em>, and his mind is liberated. The reason I said this was that a god came to the Śākyan woman Sundarī and told it to her. When she heard about it, your wife Sundarī danced, played music, mended her clothes and ornaments, and prepared seats. When I heard about it, I came here to the Venerable.”</td>
   </tr>
   <tr>
     <td class='ch' title='t125.2.578b17'>難陀告曰： 「王不知不聞，何故大王而作是語？ 諸有沙門、婆羅門無不樂此休息樂、善逝樂、沙門樂、涅槃樂。 而不自觀此婬火之坑。 復當就者此事不然。</td>
@@ -180,7 +180,7 @@ next: EA_16_02.html
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0578a13" target="_blank">T125.2.578a13-9a11</a>. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>Nāgapuṣpa Park</em>. C. 象華園. Presumably, C. 象華 (lit. “elephant flower”) is a lit. translation of S. <em>nāgapuṣpa</em> (G. <em>nagapuṣpa</em>). This was probably an ancient name of the Indian Ironwood tree (<a href="https://en.wikipedia.org/wiki/Mesua_ferrea" target="_blank"><em>Mesua ferrea</em></a>), the flowers of which figured as gifts in past life stories about previous <em>buddha</em>s in Pali commentaries. S. <em>nāgapuṣpikā</em> was also the name of a kind of yellow jasmine, but a park was more likely to be named after a tree. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>Śakyan woman Sundarī</em>. C. 孫陀利釋種女, S. <em>sundarī śākyakanyā</em>. Nanda was the Buddha’s half-brother (by a different mother). Most Buddhist stories about his becoming a monk claim that he was engaged to be married when the Buddha convinced him to leave the lay life. These sources disagree as to this woman’s name, however. The Theravāda tradition says she was Janapadakalyānī Nandā. A Sanskrit tradition says she was named Yaśodharā. In the present tradition, she was apparently named Sundarī. It isn’t clear whether Nanda had actually married her in this version of events. It would seem so since she had remained single while he was a monk in this story, as is often the case in stories of monks having encounters with former romantic interests. [<a href="#ref3">back</a>]</p></li>
+<li id="n3"><p><em>Śākyan woman Sundarī</em>. C. 孫陀利釋種女, S. <em>sundarī śākyakanyā</em>. Nanda was the Buddha’s half-brother (by a different mother). Most Buddhist stories about his becoming a monk claim that he was engaged to be married when the Buddha convinced him to leave the lay life. These sources disagree as to this woman’s name, however. The Theravāda tradition says she was Janapadakalyānī Nandā. A Sanskrit tradition says she was named Yaśodharā. In the present tradition, she was apparently named Sundarī. It isn’t clear whether Nanda had actually married her in this version of events. It would seem so since she had remained single while he was a monk in this story, as is often the case in stories of monks having encounters with former romantic interests. [<a href="#ref3">back</a>]</p></li>
 <li id="n4"><p><em>an indifferent manner</em>. C. 諸根澹泊. I’m reading 諸根 to mean one’s face and limbs rather than the sense faculties (sight, hearing, etc.). This is a less common meaning of the word, which is most often used when someone sees the Buddha and notices how serene he appears. That reading fits this passage better to me. If we read 諸根 with its more common meaning, the passage would mean “senses that are indifferent,” and at the end of the paragraph “senses that are indifferent.” [<a href="#ref4">back</a>]</p></li>
 </ol>
 <hr/>
