--- a/01_agama/ekottarika/24/EA_24_05.md
+++ b/01_agama/ekottarika/24/EA_24_05.md
@@ -598,7 +598,7 @@ Now, I implore you to tell me.”
 * {:.verse}“When the Tathāgata was first born,\\
 There was an earthquake in heaven and earth.\\
 He vowed to complete the task,\\
-So today he’s called ‘Siddhârtha.’
+So today he’s called ‘Siddhārtha.’
 * {:.verse}He defeated 18 million [demons],\\
 That host of corrupt Māra Pāpīyān.\\
 He’s called Śākyamuni\\
@@ -608,7 +608,7 @@ Was ‘Gautama’ when he was a disciple.\\
 Today, I’ve become an ascetic\\
 Who was formerly named Udāyī.”
 
-128\. When he heard this, King Śuddhodana was overjoyed and couldn’t control himself. He said to Udāyī, “How is it, Udāyī? The prince Siddhârtha exists as he did before?”
+128\. When he heard this, King Śuddhodana was overjoyed and couldn’t control himself. He said to Udāyī, “How is it, Udāyī? The prince Siddhārtha exists as he did before?”
 {:#p128}
 
 Udāyī replied, “The Buddha Śākyamuni is present today.”
