--- a/01_agama/ekottarika/24/EA_24_06.md
+++ b/01_agama/ekottarika/24/EA_24_06.md
@@ -122,7 +122,7 @@ The monks then said to the Bhagavān, “The Tathāgata is the Dharma king and t
 34\. “Now, I so-and-so will part with these eight things and respectfully keep the eight fasting observances to not fall into the three bad destinations. I’ll keep this virtue and not enter the eight difficulties in hell or among hungry ghosts and animals. I’ll always find good friends and not be with bad friends as a result of doing this. I’ll always attain birth to beautiful parents and families. I won’t be born in remote regions that lack Buddhas and their teachings. I won’t be born among long-lived gods above. I won’t be a slave among humans. I won’t become Brahmā or Śakra, nor will I become a wheel-turning noble king. I’ll always be born in the presence of a Buddha; I will see a Buddha myself, hear the teaching myself, and employ it so my faculties aren’t confused. If I vow to practice the three vehicles, I’ll quickly achieve the fruits of the path.’
 {:#p34}
 
-35\. “Monks, you should know, if there are laymen and laywomen who keep the eight fasting observances, those good men and good women will be headed down the three paths of being born among humans, up in heaven, or to Parinirvāṇa.”
+35\. “Monks, you should know, if there are laymen and laywomen who keep the eight fasting observances, those good men and good women will be headed down the three paths of being born among humans, up in heaven, or to <em>parinirvāṇa</em>.”
 {:#p35}
 
 36\. The Bhagavān then spoke these verses:
