--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -141,7 +141,7 @@ next: MA_003.html
 <p>Xuanzang translated S. <em>cetasa ekotībhāva</em> as “mind with a single inclination” (<span class="ch">心一趣性</span>). This was glossed in this way: “Because of the subsidence of seeking and examining things, the mind is not scattered, not confused, and not flowing. It securely rests on a single point, so it’s called mind with a single inclination.” (<span class="ch">尋伺寂靜故，心不散不亂不流。安住一境，故名心一趣性。</span>)</p>
 <p><em>without noticing or examining things, <em>samādhi</em> produces joy and happiness, and they accomplish and dwell in the second meditation.</em> C. <span class="ch">無覺、無觀，定生喜樂，得第二禪成就遊</span>, P. <em>avitakkaṁ avicāraṁ samādhijaṁ pītisukhaṁ dutiyaṁ jhānaṁ upasampajja viharati</em>, S. <em>avitarkam avicāraṃ samādhijaṃ prītisukhaṃ dvitīyaṃ dhyānam upasaṃpadya viharati</em>. In this second stage of meditation, the wandering mind settles down. This allows <em>samādhi</em> to be established, which causes a renewed joy and happiness to arise.</p>
 <p><em>without noticing or examining things</em>. C. <span class="ch">無覺、無觀</span>, P. <em>avitakkaṁ avicāraṁ</em>, S. <em>avitarkam avicāraṃ</em>. The commentary elaborates by saying that in the second meditation seeking and examining is not found, is not actively manifest, and doesn’t exist.</p>
-<p><em>samādhi</em> produces joy and happiness</em>. C. <span class="ch">定生喜樂</span>, P. <em>samādhijaṃ prītisukhaṃ</em>, S. <em>samādhijaṃ prītisukhaṃ</em>.</p>
+<p>samādhi<em> produces joy and happiness</em>. C. <span class="ch">定生喜樂</span>, P. <em>samādhijaṃ prītisukhaṃ</em>, S. <em>samādhijaṃ prītisukhaṃ</em>.</p>
 <p>The C. translation of <em>samādhi</em> was <span class="ch">定</span>, which meant “fixed, established, settled, stabilized,” but English translators typically disregard this and translate <span class="ch">定</span> as “concentration.” In Buddhist language, which was not very different from Sanskrit literature in this case, <em>samādhi</em> meant fixing the mind on one subject without distraction, which was considered a purification of mind. It was also described as the merging of the subject and object in the mind. Given this special usage, I’ve chosen not to translate the term to English.</p>
 <p>The commentary in the <cite>Dharmaskandha</cite> describes <em>samādhi</em> as the mind resting, completely resting, resting nearby, and resting securely in someone in whom seeking and examining has subsided. Their mind is not scattered or distracted. It’s collected and fully maintained, and it has a single-pointed nature.</p>
 <p>Joy and happiness are defined in the same way as they were in the first meditation, except that here it is the subsiding of seeking and examining that produces the <em>samādhi</em> that produces this joy and happiness.</p>
