--- a/01_agama/samyukta/01/SA1_29.md
+++ b/01_agama/samyukta/01/SA1_29.md
@@ -31,7 +31,7 @@ next: SA1_30.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.5a18'>佛告羅睺羅： 「善哉！諦聽！諦聽，善思念之。 當為汝說。 羅睺羅，當觀若所有諸色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切悉皆非我、不異我、不相在。 如是平等慧正觀。</td>
-    <td id='p4'>4. The Buddha told Rāhula, “Good! Listen closely! listen closely, and consider it well. I will explain this for you. Rāhula, you should observe that whatever forms there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither are present in the other. They are correctly observed with equitable wisdom in this way.</td>
+    <td id='p4'>4. The Buddha told Rāhula, “Good! Listen closely! listen closely, and consider it well. I will explain this for you. Rāhula, you should observe that whatever forms there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither are present in the other.<sup id="ref2"><a href="#n2">2</a></sup> They are correctly observed with equitable wisdom in this way.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.5a23'>「如是，受⋯想⋯行⋯識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。 如是平等慧如實觀。</td>
@@ -43,7 +43,7 @@ next: SA1_30.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.5a29'>「羅睺羅，比丘若如是於此識身及外境界一切相，無有我、我所見、我慢使繫著者，比丘是名斷愛欲，轉去諸結。 正無間等，究竟苦邊。」</td>
-    <td id='p7'>7. “Rāhula, if a monk has no binding attachments to views of self and what belongs to self or to the tendency of self pride regarding this body of awareness and all the signs of the external world, that monk is called one who has stopped craving desires and turned away from the bonds. Right at that moment,<sup id="ref2"><a href="#n2">2</a></sup> he reaches the final end of suffering.”</td>
+    <td id='p7'>7. “Rāhula, if a monk has no binding attachments to views of self and what belongs to self or to the tendency of self pride regarding this body of awareness and all the signs of the external world, that monk is called one who has stopped craving desires and turned away from the bonds. Right at that moment,<sup id="ref3"><a href="#n3">3</a></sup> he reaches the final end of suffering.”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.5b3'>時，羅睺羅聞佛所說歡喜，奉行。</td>
@@ -56,9 +56,10 @@ next: SA1_30.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">This is <em>sūtra</em> no. 23 in the <cite>Taisho</cite> edition and no. 29 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005a11" target="_blank">T99.2.5a11-b4</a>). It’s parallel to <a href="https://suttacentral.net/sn22.91" target="_blank">SN 22.91-92</a>. It also shares a very similar template with <a href="https://suttacentral.net/sn18.21" target="_blank">SN 18.21-22</a> and <a href="../02/SA2_41-48.html" target="_blank">SĀ 2.41-48</a> (which apply the same template to the six senses and related elements of sensory experience).<br/>
-A comparison of this <em>sūtra</em> with SĀ 2.41-48 is instructive in the instability of Chinese translations of nearly identical Indic <em>sūtra</em>s. Seemingly minor changes in wording and grammar make the meaning of these parallel texts shift in significant ways. It’s difficult to determine whether this was the result of inconsistent translation or poor copying of the text in later centuries. The same issues may have existed in the original manuscript that was translated to Chinese, too. Being that it’s difficult to decide with certainty which version is the most accurate, I’ve translated both Chinese translations as faithfully as possible. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>right at that moment</em>. C. 正無間等. Lit. “exactly immediate.” There are passages in SĀ that appear to indicate that P. <em>abhisamaya</em> is the parallel to 無間等, but the two words mean very different things, making it unlikely to me. S. <em>ānantarya</em> (“immediate succession”) would match the meaning of C. much better. If that’s the case, then the Indic parallel would have been equiv. to something like S. <em>samānantarya</em> (“a complete immediacy”?). The functional meaning of the word here would seem to describe the immediacy of a sudden realization. This might explain why the corresponding word in some P. parallels is <em>abhisamaya</em> (“penetration to understanding”). [<a href="#ref2">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 23 in the <cite>Taisho</cite> edition and no. 29 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0005a11" target="_blank">T99.2.5a11-b4</a>). It’s parallel to <a href="https://suttacentral.net/sn22.91" target="_blank">SN 22.91-92</a>. It also shares a very similar template with <a href="https://suttacentral.net/sn18.21" target="_blank">SN 18.21-22</a> and <a href="../02/SA2_41-48.html" target="_blank">SĀ 2.41-48</a> (which apply the same template to the six senses and related elements of sensory experience).</p>
+<p>A comparison of this <em>sūtra</em> with SĀ 2.41-48 is instructive in the instability of Chinese translations of nearly identical Indic <em>sūtra</em>s. Seemingly minor changes in wording and grammar make the meaning of these parallel texts shift in significant ways. It’s difficult to determine whether this was the result of inconsistent translation or poor copying of the text in later centuries. The same issues may have existed in the original manuscript that was translated to Chinese, too. Being that it’s difficult to decide with certainty which version is the most accurate, I’ve translated both Chinese translations as faithfully as possible. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>they are all not self, not different than self, and neither are present in the other</em>. C. 彼一切非我、不異我、不相在. The last of these three options lit. means “not mutually present.” It was actually a contraction of two options: self is not in form, and form is not in self (= P. <em>attani vā rūpaṁ, rūpasmiṁ vā attānaṁ</em>). This shorthand is quite common in SĀ. The full set of four options does, however, occur a few times as 色是我，色異我，我在色，色在我 (cf. SĀ 1.157, 1.169, and 1.177). [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>right at that moment</em>. C. 正無間等. Lit. “exactly immediate.” There are passages in SĀ that appear to indicate that P. <em>abhisamaya</em> is the parallel to 無間等, but the two words mean very different things, making it unlikely to me. S. <em>ānantarya</em> (“immediate succession”) would match the meaning of C. much better. If that’s the case, then the Indic parallel would have been equiv. to something like S. <em>samānantarya</em> (“a complete immediacy”?). The functional meaning of the word here would seem to describe the immediacy of a sudden realization. This might explain why the corresponding word in some P. parallels is <em>abhisamaya</em> (“penetration to understanding”). [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
 
