--- a/01_agama/samyukta/01/SA1_50.md
+++ b/01_agama/samyukta/01/SA1_50.md
@@ -64,7 +64,7 @@ next: SA1_51.html
 The next metaphor, which asserts that diversity of form is the result of diversity of mind, uses the example of a colorful bird. The P. version is unclear whether the metaphor is about a bird or a painting, though the meaning is not impacted much by it. I discuss the language issues in the notes below. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>I don’t see a single form as varied as a multi-colored bird, but its mind goes beyond that. … That animal’s form is diverse because its mind is diverse.</em> C. 我不見一色種種如斑色鳥，心復過是。⋯彼畜生心種種故，色種種。 P. <em>Diṭṭhaṁ vo, bhikkhave, caraṇaṁ nāma cittan”ti? … Tampi kho, bhikkhave, caraṇaṁ nāma cittaṁ citteneva cittitaṁ. Tenapi kho, bhikkhave, caraṇena cittena cittaññeva cittataraṁ.</em> The P. passage here is confusing since the word for both “mind” and “colorful” is P. <em>citta</em> (whereas, they are <em>citta</em> and <em>citra</em> respectively in S.). It does indicate that P. <em>caraṇa</em> is a proper name, but this term is also confusing because it can mean “conduct” or “painting.” The C. passage makes it clear what these words were intended to mean, or at least presents us with an interpretation that’s coherent. In any case, the P. version will reference animals when this passage is repeated, giving us more confidence that it indeed should be read like the C. version. See the next note for more on the language issues involved. [<a href="#ref2">back</a>]</li>
 <li id="n3"><em>cāraṇa bird.</em> C. 嗟蘭那鳥 (EMC. tsiă-lan-na + “bird” = G. <em>carana</em>?). In the P. passage, <em>cāraṇa</em> again appears to be a standalone noun meaning “colorful painting.” Here, however, it’s the name of a bird that apparently was quite colorful and looked like it was painted. I can’t help but notice a couple hints at what has happened here in my search for clues about it.<br/>
-First, P./S. <em>vāraṇa</em> occurs in a few places in Pali and Sanskrit sources as a kind of bird. This word was at times confused with <em>cāraṇa</em> as evidenced by the variant reading in <cite>Therāgatha</cite> 19.1, where <em>vāraṇika</em> occurs as an alt. reading for <em>cāraṇika</em>.<br/>
+First, P./S. <em>vāraṇa</em> occurs in a few places in Pali and Sanskrit sources as a kind of bird. This word was at times confused with <em>cāraṇa</em> as evidenced by the variant reading in <cite>Therāgathā</cite> 19.1, where <em>vāraṇika</em> occurs as an alt. reading for <em>cāraṇika</em>.<br/>
 Another consideration is that C. translators sometimes appended words like “country” or “bird” to Indic proper nouns as a interlineal comment for readers unfamiliar with the names involved. It may be that the original didn’t specify that <em>cāraṇa</em> was a bird, but the translator understood it as such.<br/>
 Thus, the issue seems to be one of interpretation, but also possibly a case of words changing in pronunciation over time and becoming confused. The P. tradition may have forgotten that <em>cāraṇa</em> could be the name of a bird, and it wouldn’t be apparent to lexicographers if the usage was rare and the intended meaning was not indicated by context. [<a href="#ref3">back</a>]</li>
 </ol>
