--- a/01_agama/samyukta/06/SA6_5.md
+++ b/01_agama/samyukta/06/SA6_5.md
@@ -65,7 +65,7 @@ His intelligence comprehends them.
 * {:.verse}Because he comprehends these feelings,\\
 He ends the contaminants in the present life.\\
 When he dies, he doesn’t fall repeatedly;\\
-He abides forever in Parinirvāṇa.”
+He abides forever in <em>parinirvāṇa</em>.”
 
 13\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p13}
