--- a/01_agama/samyukta/25/SA25_57.md
+++ b/01_agama/samyukta/25/SA25_57.md
@@ -49,7 +49,7 @@ He has forever transcended love of the world.”
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 1.1](https://suttacentral.net/sn1.1){:target="_blank"}, [SĀ2 180](../../samyukta2/SA2_180.html){:target="_blank"}, and T1579.378a7-11. [\[back\]](#ref1)
-2. {:#n2} <em>again and again</em>. The Chinese literally reads “thus and thus held on" and “thus and thus moved forward". Parallel expressions are found in a quotation of this sūtra in the Yogâcārabhūmi (T1579.378a7-11), which in the Sanskrit version uses the expressions “yathā yathāhaṃ” and “tathā tathā.” I’ve translated both as <em>subsequent attempts</em>, rendering the expressions as “again and again,” but they could also mean <em>in different ways</em>, which I’d render as “in this way or that.” [\[back\]](#ref2)
+2. {:#n2} <em>again and again</em>. The Chinese literally reads “thus and thus held on" and “thus and thus moved forward". Parallel expressions are found in a quotation of this sūtra in the Yogācārabhūmi (T1579.378a7-11), which in the Sanskrit version uses the expressions “yathā yathāhaṃ” and “tathā tathā.” I’ve translated both as <em>subsequent attempts</em>, rendering the expressions as “again and again,” but they could also mean <em>in different ways</em>, which I’d render as “in this way or that.” [\[back\]](#ref2)
 
 ---
 
