--- a/09_other_sutras/T757.md
+++ b/09_other_sutras/T757.md
@@ -397,25 +397,25 @@ Parable of Seeing Births among Humans
 120\. “Still, the warriors, priests, and prominent men in great clans who follow that practice aren’t able to attain even a small part of the supreme teaching among humans that they seek. How could they attain the noble one’s knowing and seeing the realization of what’s supreme? Why is that? They can’t comprehend noble wisdom, and they don’t awaken to it. Since they don’t awaken to noble wisdom, how can they escape to the end of suffering? Śāriputra, if they awaken to noble wisdom as it really is, then they can open its three doors, end the path of birth and death, and not be reborn anymore.
 {:#p120}
 
-121\. “Furthermore, Śāriputra, the world has a kind of priest who experiences the body of birth and death in transmigration, imagining it to be pure. They say to each other, ‘Some person or another experiences the body of birth and death in transmigration; they will attain purity.’ Śāriputra, the transmigration of birth and death is very impure. It’s not that I didn’t pass through birth and death it in the past. From the beginningless past until now, I’ve been in the world for an eternity, but I wasn’t able escape it, aside from the five Śuddhâvāsa Heavens. Śāriputra, after one birth in the Śuddhâvāsa Heavens, a being isn’t reborn among humans. In that heavenly destination, they realize nirvāṇa.
+121\. “Furthermore, Śāriputra, the world has a kind of priest who experiences the body of birth and death in transmigration, imagining it to be pure. They say to each other, ‘Some person or another experiences the body of birth and death in transmigration; they will attain purity.’ Śāriputra, the transmigration of birth and death is very impure. It’s not that I didn’t pass through birth and death it in the past. From the beginningless past until now, I’ve been in the world for an eternity, but I wasn’t able escape it, aside from the five Śuddhāvāsa Heavens. Śāriputra, after one birth in the Śuddhāvāsa Heavens, a being isn’t reborn among humans. In that heavenly destination, they realize nirvāṇa.
 {:#p121}
 
 122\. “Śāriputra, those who’ve yet to exit from birth and death aren’t able to attain even a small part of the supreme teaching among humans that they seek. How could they attain the noble one’s knowing and seeing the realization of what’s supreme? Why is that? By imagining that, they can’t comprehend noble wisdom, and they don’t awaken to it. Since they don’t awaken to noble wisdom, how can they escape to the end of suffering? Śāriputra, if they awaken to noble wisdom as it really is, then they can open its three doors, end the path of birth and death, and not be reborn anymore.
 {:#p122}
 
-123\. “Furthermore, Śāriputra, the world has a kind of priest who imagines the six destinations of rebirth to be pure. They say to each other, ‘Some person or another traverses the six destinations of rebirth; they will attain purity.’ Śāriputra, those six destinations are very impure. It’s not that I didn’t pass through birth and death it in the past. From the beginningless past until now, I’ve been in the world for an eternity transmigrating in the six destinations, aside from the five Śuddhâvāsa Heavens. Śāriputra, after one birth in the Śuddhâvāsa Heavens, a being isn’t reborn among humans. In that heavenly destination, they realize nirvāṇa.
+123\. “Furthermore, Śāriputra, the world has a kind of priest who imagines the six destinations of rebirth to be pure. They say to each other, ‘Some person or another traverses the six destinations of rebirth; they will attain purity.’ Śāriputra, those six destinations are very impure. It’s not that I didn’t pass through birth and death it in the past. From the beginningless past until now, I’ve been in the world for an eternity transmigrating in the six destinations, aside from the five Śuddhāvāsa Heavens. Śāriputra, after one birth in the Śuddhāvāsa Heavens, a being isn’t reborn among humans. In that heavenly destination, they realize nirvāṇa.
 {:#p123}
 
 124\. “Śāriputra, those who’ve yet to part with those destinations aren’t able to attain even a small part of the supreme teaching among humans that they seek. How could they attain the noble one’s knowing and seeing the realization of what’s supreme? Why is that? By imagining that, they can’t comprehend noble wisdom, and they don’t awaken to it. Since they don’t awaken to noble wisdom, how can they escape to the end of suffering? Śāriputra, if they awaken to noble wisdom as it really is, then they can open its three doors, end the path of birth and death, and not be reborn anymore.
 {:#p124}
 
-125\. “Furthermore, Śāriputra, the world has a kind of priest who imagines certain birth places to be pure. They say to each other, ‘Some person or another was born in a certain place; they will attain purity.’ Śāriputra, those birth places are very impure. It’s not that I didn’t pass through births in the past. From the beginningless past until now, I’ve been in the world for an eternity and didn’t escape birth and death, aside from the five Śuddhâvāsa Heavens. Śāriputra, after one birth in the Śuddhâvāsa Heavens, a being isn’t reborn among humans. In that heavenly destination, they realize nirvāṇa.
+125\. “Furthermore, Śāriputra, the world has a kind of priest who imagines certain birth places to be pure. They say to each other, ‘Some person or another was born in a certain place; they will attain purity.’ Śāriputra, those birth places are very impure. It’s not that I didn’t pass through births in the past. From the beginningless past until now, I’ve been in the world for an eternity and didn’t escape birth and death, aside from the five Śuddhāvāsa Heavens. Śāriputra, after one birth in the Śuddhāvāsa Heavens, a being isn’t reborn among humans. In that heavenly destination, they realize nirvāṇa.
 {:#p125}
 
 126\. “Śāriputra, those who’ve yet to part with those births aren’t able to attain even a small part of the supreme teaching among humans that they seek. How could they attain the noble one’s knowing and seeing the realization of what’s supreme? Why is that? By imagining that, they can’t comprehend noble wisdom, and they don’t awaken to it. Since they don’t awaken to noble wisdom, how can they escape to the end of suffering? Śāriputra, if they awaken to noble wisdom as it really is, then they can open its three doors, end the path of birth and death, and not be reborn anymore.
 {:#p126}
 
-127\. “Furthermore, Śāriputra, the world has a kind of priest who imagines their own kin to be pure. They say to each other, ‘Some person or another supports their own kin; they will attain purity.’ Śāriputra, those seeds of theirs are very impure. It’s not that I didn’t support a kind of birth in the past. From the beginningless past until now, I’ve been in the world for an eternity, but I didn’t escape birth and death, aside from the five Śuddhâvāsa Heavens. Śāriputra, after one birth in the Śuddhâvāsa Heavens, a being isn’t reborn among humans. In that heavenly destination, they realize nirvāṇa.
+127\. “Furthermore, Śāriputra, the world has a kind of priest who imagines their own kin to be pure. They say to each other, ‘Some person or another supports their own kin; they will attain purity.’ Śāriputra, those seeds of theirs are very impure. It’s not that I didn’t support a kind of birth in the past. From the beginningless past until now, I’ve been in the world for an eternity, but I didn’t escape birth and death, aside from the five Śuddhāvāsa Heavens. Śāriputra, after one birth in the Śuddhāvāsa Heavens, a being isn’t reborn among humans. In that heavenly destination, they realize nirvāṇa.
 {:#p127}
 
 128\. “Śāriputra, those who’ve yet to escape birth and death aren’t able to attain even a small part of the supreme teaching among humans that they seek. How could they attain the noble one’s knowing and seeing the realization of what’s supreme? Why is that? By imagining that, they can’t comprehend noble wisdom, and they don’t awaken to it. Since they don’t awaken to noble wisdom, how can they escape to the end of suffering? Śāriputra, if they awaken to noble wisdom as it really is, then they can open its three doors, end the path of birth and death, and not be reborn anymore.
