--- a/01_agama/dirgha/DA_14.md
+++ b/01_agama/dirgha/DA_14.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Long Discourses | 14. Questions Asked by Śakra the Lord of Gods
+title: The Long Discourses | 14. The Questions Asked by Śakra the Lord of Gods
 type: kramdown
 base: ../../
 previous: DA_13.html
@@ -8,7 +8,7 @@ next: DA_15.html
 ---
 
 # [The Long Discourses](index.html)
-## 14. Questions Asked by Śakra the Lord of Gods
+## 14. The Questions Asked by Śakra the Lord of Gods
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying north of the village of Āmbara of Magadha in the Indrasāla cave on Mount Vaidehaka.
 {:#p1}
