--- a/01_agama/ekottarika/43/EA_43_07.md
+++ b/01_agama/ekottarika/43/EA_43_07.md
@@ -309,7 +309,7 @@ The root of blame is forever pulled up.
 
 ### Notes
 
-1. {:#n1} Parallels include [DN 56.11](https://suttacentral.net/dn2){: target="_blank"} and [DA 27](../../dirgha/DA_27.html){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} Parallels include [DN 56.11](https://suttacentral.net/dn2){: target="_blank"} and [DĀ 27](../../dirgha/DA_27.html){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
