--- a/01_agama/other/T102.md
+++ b/01_agama/other/T102.md
@@ -40,7 +40,7 @@ They said, “Virtuous sir, form is impermanent.”
 
 ### Notes
 
-1. {:#n1} This sutra is an extract from Yijing’s translation in 710 CE of the Mūlasarvâstivāda Vinaya (T1451.407a26-b15) that also appears in the Taisho as an independent text. In that Vinaya account, it was the third sermon that the Buddha taught to his first five disciples. [\[back\]](#ref1)
+1. {:#n1} This sutra is an extract from Yijing’s translation in 710 CE of the Mūlasarvāstivāda Vinaya (T1451.407a26-b15) that also appears in the Taisho as an independent text. In that Vinaya account, it was the third sermon that the Buddha taught to his first five disciples. [\[back\]](#ref1)
 
 ---
 
