--- a/01_agama/samyukta/01/SA1_55.md
+++ b/01_agama/samyukta/01/SA1_55.md
@@ -100,7 +100,7 @@ next: SA1_56.html
 <ol>
 <li id="n1">This is <em>sūtra</em> no. 272 in the <cite>Taisho</cite> edition and no. 55 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0071c14" target="_blank">T99.2.71c14-2b13</a>). It’s parallel with <a href="https://suttacentral.net/ma140" target="_blank">SN 22.80</a>. <a href="https://suttacentral.net/iti91" target="_blank">MĀ 140</a> and <a href="" target="_blank">Iti 91</a> both extract the Buddha’s teaching to the monks about the goal of the mendicant life without presenting the story of how it came to be taught found here.<br/>
 This story is remarkable in that the Buddha appears to behave like most people, having emotional reactions that aren’t necessarily perfect. It clashes somewhat with the image of the deified Buddha of later Buddhism who serves as the model of a spiritually perfected being. Here, he is depicted as being quite disgusted with his monks arguing over insignificant matters and considering abandoning them. However, after cooling off in solitude, he decides that it would be best to return and try to teach them how to better behave.<br/>
-The nature of his teaching suggests that some of the new monks were not adjusting to the mendicant lifestyle very well. SN 22.80 locates the sermon at Kapilavatthu, suggesting that perhaps this event occurred after the king of the Śakya tribe had ordered one son of each family to become a monk. The sudden influx of novices perhaps tried the patience of even a Buddha.<br/>
+The nature of his teaching suggests that some of the new monks were not adjusting to the mendicant lifestyle very well. SN 22.80 locates the sermon at Kapilavatthu, suggesting that perhaps this event occurred after the king of the Śākya tribe had ordered one son of each family to become a monk. The sudden influx of novices perhaps tried the patience of even a Buddha.<br/>
 This version of the <em>sūtra</em> is generally expanded compared to SN 22.80, but it includes most of the details peculiar to it, such as the pairing of the four abodes of mindfulness with the signless <em>samādhi</em> as the recommended training. However, the mention of three unskillful perceptions (<em>vitarka</em> or <em>saṃkalpa</em>) is followed by three concepts (<em>samjñā</em>) that derive from them. This is not found in SN 22.80. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>gave a subtle sign</em>. C. 表現微相, P. <em>tathārūpaṁ iddhābhisaṅkhāraṁ</em>. The C. lit. means “display a little sign.” It’s difficult to imagine that it translated something equiv. to the Pali parallel. While not very specific, it could easily be interpreted to mean the wave of a hand or a nod of the head. In contrast, the P. parallel brings us back to an image of the Buddha as a supernatural being with miraculous powers rather than a human being. [<a href="#ref2">back</a>]</li>
 <li id="n3"><em>unskillful ways of perception.</em> C. 不善覺法, P. <em>akusalavitakkā</em>. Translating C. 覺 is never easy because English equivalents are easily misunderstood. Generally speaking, it refers to the initial recognition or taking notice of something, which can be a crude or shallow perception, or a sudden realization. English “noticing,” “discovering,” or “realizing” match the meaning of 覺 fairly well, but there aren’t many English nouns that are as clear. 覺 was used to capture this connotation of S. <em>vitarka</em> (G. <em>vitaka</em>, P. <em>vitakka</em>). In S., it meant a superficial kind of thinking or reflection that is doubtful or uncertain. One use of the English word “perception” refers to an initial or superficial recognition. That is my intended meaning when translating 覺 in this way.<br/>
