--- a/01_agama/samyukta/01/SA1_43.md
+++ b/01_agama/samyukta/01/SA1_43.md
@@ -26,7 +26,7 @@ next: SA1_44.html
     <td>Ānanda said, “Sir, you may ask your question. I’ll answer with what I know.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.65c16'>舍利弗言：「阿難！所謂滅者。云何為[6]滅？誰有此滅？」</td>
+    <td class="ch" title='t99.2.65c16'>舍利弗言：「阿難！所謂滅者。云何為滅？誰有此滅？」</td>
     <td id='p3'>3. Śāriputra asked, “Ānanda, there’s the term ‘cessation.’ What is it that ceases? Who possesses this cessation?”</td>
   </tr>
   <tr>
